# models

./: pyproject.toml
data/: export_to_postrgres.ipynb
notebooks/: all_positions_historical.ipynb  all_positions_model.ipynb  attacker_model.ipynb  defender_model.ipynb  goalkeeper_model.ipynb  helpers.py  midfielder_model.ipynb  simple_model.ipynb
