[tool.poetry]
name = "models"
version = "0.1.0"
description = ""
authors = ["Jacek Wasilewski <jacek@golai.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
smart-open = "^6.3.0"
scikit-learn = "^1.2.2"
pandas = "^2.0.0"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
jupyterlab = "^3.6.3"
jupyterlab-git = "^0.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
